--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,8 +1,7 @@
 name: Publish Release, Deploy and Merge to Main
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
 
 jobs:
   publish_release_and_merge:
@@ -11,14 +10,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Publish Release and Merge to Main
+      - name: Merge to Main
         run: |
-          RELEASE_NAME=$(echo "${GITHUB_REF/refs\/tags\//}")
-
-          # Publish the release
-          gh release edit ${RELEASE_NAME} --title "Release ${RELEASE_NAME}" --notes "Release notes for ${RELEASE_NAME}" --draft false --prerelease false
-
-          # Merge release branch to main
           git fetch origin refs/heads/release/*:refs/remotes/origin/release/*
           git checkout main
           git pull
